--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display');
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700');*/
+@import url('https://fonts.googleapis.com/css?family=Dosis');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  /*font-family: 'Open Sans', sans-serif;*/
+  font-family: 'Dosis', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
